Made a start on the header slider

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,3 +1,13 @@
-.navbar-color {
-    color: white !important;
+.img-carousel {
+    position: relative;
+}
+
+.gallery-cell {
+    background: #7289DA;
+    height: 950px
+}
+
+.btn-header {
+    position: absolute;
+    z-index: 3;
 }
