--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,11 +3,84 @@
 }
 
 .gallery-cell {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background: #7289DA;
-    height: 950px
+    width: 100%;
+    height: 800px;
+    margin-right: 10px;
 }
 
 .btn-header {
     position: absolute;
     z-index: 3;
+}
+
+.header-1 {
+    background-image: url('../IMG/Obsidion Bot.png');
+    background-position: center center;
+    background-size: 100%;
+}
+
+.header-2 {
+    background-image: url('../IMG/asyncpixel.png');
+    background-position: center center;
+    background-size: 100%;
+}
+
+.header-3 {
+    background-image: url('../IMG/Obsidion Dashboard.png');
+    background-position: center center;
+    background-size: 100%;
+}
+
+.header-4 {
+    background-image:  url('../IMG/mcsrvstats.png');
+    background-position: center center;
+    background-size: 100%;
+}
+
+@media screen and ( max-width: 600px ) {
+    /* half-width cells for larger devices */
+    .gallery-cell { height: 400px; }
+    .header-1 {background-size: 1100px;}
+    .header-2 {background-size: 1100px;}
+    .header-3 {background-size: 1100px;}
+    .text-box {all: unset;}
+}
+
+.white-square {
+    position: relative;
+    width: 50%;
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 10px;
+}
+
+.white-square:after {
+    content: "";
+    display: block;
+    padding-bottom: 50%;
+}
+
+.square-content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.heading-title {
+    font-weight: 700;
+    font-size: 65px;
+    color: black;
+}
+
+.btn-slider {
+    background-color: #7289DA;
+    color: white;
+    border-radius: 10px;
+    width: 250px;
 }
