--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,3 +1,13 @@
+html {
+    scroll-behavior: smooth;
+    -ms-scroll-snap-type: mandatory;
+    scroll-snap-type: mandatory;
+    /* -ms-scroll-snap-points-y: repeat(100vh);
+        scroll-snap-points-y: repeat(100vh); */
+    -ms-scroll-snap-type: y mandatory;
+        scroll-snap-type: y mandatory;
+}
+
 .img-carousel {
     position: relative;
 }
@@ -48,12 +58,13 @@
     .header-2 {background-size: 1100px;}
     .header-3 {background-size: 1100px;}
     .text-box {all: unset;}
+    .mobile-image {height: 100% !important; width: 100%; }
 }
 
 .white-square {
     position: relative;
     width: 50%;
-    background-color: rgba(255, 255, 255, 0.3);
+    /* background-color: rgba(255, 255, 255, 0.3); */
     border-radius: 10px;
 }
 
@@ -69,7 +80,7 @@
     height: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
 }
 
 .heading-title {
@@ -83,4 +94,46 @@
     color: white;
     border-radius: 10px;
     width: 250px;
+}
+
+.white {
+    color: white;
+}
+
+.content-scroll {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    color: black;
+    width: 100%;
+    left: 0;
+    /* font-size: calc(1rem + 3vw); */
+}
+
+
+section {
+    border-bottom: 1px solid white;
+    padding: 1rem;
+    height: 100vh;
+    scroll-snap-align: start;
+    text-align: center;
+    position: relative;
+}
+
+.img-fluid {
+    min-width: 100px !important;
+    max-width: 1000px;
+}
+
+#obsidion {
+    background-color: #7289DA;
+}
+
+#mcsrvstats {
+    background-color: #2C2F33;
+}
+
+#asyncpixel {
+    background-color: #23272A;
 }
